--- a/pGlmSys.NET/My Project/Settings.settings
+++ b/pGlmSys.NET/My Project/Settings.settings
@@ -5,7 +5,7 @@
     <Setting Name="dbServers" Type="System.Collections.Specialized.StringCollection" Scope="Application">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string&gt;ANALISTASIS\SQLEXPRESS&lt;/string&gt;
+  &lt;string&gt;DESKTOP-FMPULE0\MSSQLSERVER&lt;/string&gt;
   &lt;string&gt;195.1.1.202\SQLEXPRESS&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
