--- a/pGlmSys.NET/app.config
+++ b/pGlmSys.NET/app.config
@@ -31,7 +31,7 @@
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-            <string>ANALISTASIS\SQLEXPRESS</string>
+            <string>DESKTOP-FMPULE0\MSSQLSERVER,1433</string>
             <string>195.1.1.202\SQLEXPRESS</string>
           </ArrayOfString>
         </value>
